Fixed sponsor spacing and header z-index

--- a/src/css/festival-statistics.css
+++ b/src/css/festival-statistics.css
@@ -24,5 +24,5 @@
 
 .festival-statistics-component .statistics h2 {
     margin: 10px;
-    font-weight: 400;
+    font-weight: 150;
 }
